--- a/frontend/library-app/package.json
+++ b/frontend/library-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
